[package]
name = "embedded-runner-lib"
version = { workspace = true }
authors = [
	"Jan Nordholz <j.nordholz@tu-berlin.de",
	"Markus Meissner <meissner@nitrokey.com>"
]
edition = "2021"
license = "MIT"

[dependencies]
### base dependencies
apps = { path = "../../components/apps" }
cfg-if = "*"
delog = "0.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rtic = "1.0"
embedded-storage = "0.3"
embedded-hal = "0.2.3"
embedded-time = "0.12"
generic-array = "0.14"
nfc-device = { path = "../../components/nfc-device" }
rand_core = "0.6"
rtt-target = { version = "0.3", features = ["cortex-m"], optional = true }
spi-memory = "0.2.0"
utils = { path = "../../components/utils" }
serde = { version = "1.0", default-features = false }
heapless = "0.7"
heapless-bytes = { version = "0.3.0", features = ["cbor"] }
lfs-backup = { path = "../../components/lfs-backup" }
rand = { version =  "0.8.5", default-features = false }

### protocols and dispatchers
apdu-dispatch = "0.1"
ctaphid-dispatch = "0.1"
ctap-types = "0.1"

### trussed core
trussed = "0.1"
interchange = "0.3"
littlefs2 = { version = "0.4", features = ["c-stubs"] }

### usb machinery
usb-device = "0.2"
usbd-serial = "0.1"
usbd-ccid = "0.2"
usbd-ctaphid = "0.1"

### NRF52 specific dependencies
chacha20 = { version = "0.7", default-features = false, features = ["rng"], optional = true }
nrf52840-hal = { version = "0.15.1", optional = true }
nrf52840-pac = { version = "0.11", optional = true }

### LPC55 specific dependencies
cortex-m-semihosting = { version = "0.3.5", optional = true }
lpc55-hal = { version = "0.3", features = ["littlefs", "rtic-peripherals"], optional = true }
lpc55-pac = { version = "0.4", optional = true }
fm11nc08 = { path = "../../components/fm11nc08", optional = true }
nb = "1"
systick-monotonic = { version = "1.0.0", optional = true }

### Allocator
alloc-cortex-m = { version = "0.4.3", optional = true }
bitflags = "1.3.2"
ref-swap = "0.1.0"
se05x = { version = "0.0.1", optional = true }

[build-dependencies]
cargo-lock = "7"
serde = { version = "1", features = ["derive"] }
toml = "0.5"

[features]
default = ["alloc"]

test = ["apps/test", "se050", "se050-test-app"]
develop = ["no-encrypted-storage", "apps/no-reset-time-window", "log-traceP"]
develop-no-press = ["develop", "no-buttons"]
provisioner = ["apps/provisioner", "write-undefined-flash", "no-buttons", "apps/no-reset-time-window", "lpc55-hardware-checks"]

# Do not use encryption for the filesystem
no-encrypted-storage = []

# Check for undefined flash and write to determined value (for prince provisioning)
write-undefined-flash = []

# Use to auto-succeed every user presence check
no-buttons = []

# Format filesystem anyway
format-filesystem = []

alloc = ["alloc-cortex-m"]

board-nrfdk = ["soc-nrf52840", "extflash_qspi"]
board-proto1 = ["soc-nrf52840"]
board-nk3am = ["soc-nrf52840", "extflash_spi"]

board-nk3xn = ["soc-lpc55"]

soc-nrf52840 = ["nrf52840-hal", "nrf52840-pac", "chacha20", "se05x?/nrf"]
soc-lpc55 = ["lpc55-hal", "lpc55-pac", "fm11nc08", "systick-monotonic", "se05x?/lpc55", "chacha20"]

se050 = ["dep:se05x", "apps/se050"]
se050-test-app = ["se050", "apps/se050-test-app"]

extflash_qspi = []
extflash_spi = []

lpc55-hardware-checks = []

log-all = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []
log-none = []

log-traceP = [ "log-trace", "log-debug", "log-info", "log-warn", "log-error" ]
log-debugP = [ "log-debug", "log-info", "log-warn", "log-error" ]
log-infoP = [ "log-info", "log-warn", "log-error" ]
log-warnP = [ "log-warn", "log-error" ]

log-rtt = ["rtt-target"]
log-semihosting = ["cortex-m-semihosting"]

[[bin]]
name = "nrf52_runner"
path = "src/bin/app-nrf.rs"
required-features = ["soc-nrf52840"]

[[bin]]
name = "lpc55_runner"
path = "src/bin/app-lpc.rs"
required-features = ["soc-lpc55"]
