[package]
name = "usbip-runner"
version = { workspace = true }
edition = "2021"

[dependencies]
apps = { path = "../../components/apps", features = ["log-all", "nk3", "trussed-usbip"] }
cfg-if = { version = "1.0.0" }
clap = { version = "4.0.0", features = ["cargo", "derive"] }
clap-num = "1.0.0"
delog = { version = "0.1.6", features = ["std-log"] }
dialoguer = { version = "0.10.4", default-features = false }
littlefs2.workspace = true
littlefs2-core = "0.1"
log = { version = "0.4.14", default-features = false }
pretty_env_logger = "0.5.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
signal-hook = { version = "0.3.17", default-features = false }
trussed = { version = "0.1", default-features = false }
trussed-usbip = { version = "0.0.1", default-features = false, features = ["ctaphid"] }
utils = { path = "../../components/utils", features = ["log-all"] }

[build-dependencies]
utils = { path = "../../components/utils", features = ["build"] }

[features]
test = ["apps/nk3-test"]
provisioner = ["apps/nk3-provisioner"]
ccid = ["apps/trussed-usbip-ccid", "trussed-usbip/ccid"]

# PQC
backend-mldsa44 = ["apps/backend-mldsa44"]
backend-mldsa65 = ["apps/backend-mldsa65"]
backend-mldsa87 = ["apps/backend-mldsa87"]
