[package]
name = "collect-license-info"
version = "0.1.0"
edition = "2021"
authors = ["Robin Krahl <robin@nitrokey.com>"]
license = "Apache-2.0 or MIT"

[dependencies]
askama = "0.11.1"
cargo-license = "0.5.1"
cargo_metadata = "0.15.0"
gumdrop = "0.8.1"
spdx = { version = "0.9.0", features = ["text"] }
