[package]
name = "embedded-runner-lib"
version = "0.0.1"
authors = ["Jan Nordholz <j.nordholz@tu-berlin.de"]
edition = "2018"
license = "ISC"
resolver = "2"

[dependencies]
delog = "0.1.2"
nrf52840-hal = { git = "https://github.com/nrf-rs/nrf-hal", optional = true }
nrf52840-pac = "0.11"
cortex-m-rtic = { version = "0.5", default_features = false, features = ["cortex-m-7"] }

admin-app = { git = "https://github.com/solokeys/admin-app", optional = true }
apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch" }
ctaphid-dispatch = { git = "https://github.com/solokeys/ctaphid-dispatch" }
ctap-types = { git = "https://github.com/solokeys/ctap-types" }
fido-authenticator = { git = "https://github.com/Nitrokey/fido-authenticator", optional = true }
oath-authenticator = { git = "https://github.com/trussed-dev/oath-authenticator", features = ["apdu-dispatch"], optional = true }
piv-authenticator = { git = "https://github.com/solokeys/piv-authenticator", features = ["apdu-dispatch"], optional = true }
trussed = { git = "https://github.com/trussed-dev/trussed" }
interchange = "0.2.0"

usb-device = "0.2.3"
usbd-serial = "0.1.0"
usbd-ccid = { path = "../../../components/usbd-ccid" }
usbd-ctaphid = { path = "../../../components/usbd-ctaphid" }
littlefs2 = { version = "0.3.2", features = ["c-stubs"] }

chacha20 = { version = "0.7", default-features = false, features = ["rng"] }

[features]
board-nrfdk = ["soc-nrf52840"]

soc-nrf52840 = ["nrf52840-hal"]
soc-lpc55 = []
